fix: 修复纵向排列选项卡后页签错位问题 | Fixed the issue of misalignment of tabs in portrait orientation.

--- a/style/dynamic-module/tab-bar-vertical.less
+++ b/style/dynamic-module/tab-bar-vertical.less
@@ -26,9 +26,14 @@
             // }
 
             .item {
-                .item__icon {
-                    padding-left: 0;
+                .fn__flex-1:first-child {
+                    display: none;
                 }
+
+                .item__icon {
+                    padding-left: 8px;
+                }
+
                 .item__text {
                     text-align: unset;
                 }
